# element-lot-selector

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a165c8ff923a_create_initial_tables.py
backend/app/: config.py  db.py  logging.py  main.py
backend/app/api/: deps.py
backend/app/api/rest/: __init__.py  admin.py  applications.py  bookings.py  lots.py
backend/app/api/rpc/: __init__.py  methods.py  params.py  registry.py  router.py
backend/app/models/: __init__.py  application.py  booking.py  lot.py  lot_set.py
backend/app/schemas/: application.py  booking.py  common.py  lot.py
backend/app/services/: applications.py  auth.py  bookings.py  errors.py  feed_import.py  lots.py
backend/tests/: conftest.py  test_bookings.py  test_feed_import.py  test_lots.py
frontend/: Dockerfile
frontend/src/: App.tsx  main.tsx
frontend/src/api/: TransportContext.tsx  client.ts  http.ts  rest.ts  rpc.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/ApplicationForm/: ApplicationForm.css  ApplicationForm.tsx
frontend/src/components/BookingForm/: BookingForm.css  BookingForm.tsx
frontend/src/components/LotCard/: LotCard.css  LotCard.tsx
frontend/src/components/LotFilters/: LotFilters.css  LotFilters.tsx
frontend/src/components/Pagination/: Pagination.css  Pagination.tsx
frontend/src/lib/: format.ts
frontend/src/pages/AdminLoginPage/: AdminLoginPage.css  (+1 more)
frontend/src/types/: application.ts  auth.ts  booking.ts  common.ts  lot.ts
(+29 files in other folders)
