[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "RodionSOK",email = "socoljv_ev@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "structlog (>=26.1.0,<27.0.0)",
    "greenlet (>=3.5.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"
mypy = "^2.1.0"
ruff = "^0.15.20"
aiosqlite = "^0.22.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"


